--- a/creative.SCSS
+++ b/creative.SCSS
@@ -4,30 +4,60 @@ header {
   z-index: 9;
 }
 
-#nav-pc {
+#nav-pc-sp {
   font-size: 15px;
   color: black;
-
-
-  position: absolute;
-  top: 20px;
-  right: 30px;
-
-
-
-
-}
+  display: block;
+  }
 
 #link-box {
   background-color: rgba(white, 0.2);
   padding: 20px 10px;
   border-radius: 0 0 0 30px;
-
+  position: absolute;
+    top: 20px;
+      right: 30px;
   >div {
-    background-color: rgba(white, 0.5);
-  }
+      background-color: rgba(white, 0.5);
+    }
 
-  a {
+  
+
+}
+
+h1 {
+  color: red;
+}
+
+.fa-brands {
+  font-size: 100px;
+  border-radius: 50%;
+}
+
+/*ハンバーガー*/
+.fa-solid.fa-bars {
+  font-size: 50px;
+  color: white;
+  float: left;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/*バツマーク*/
+.fa-solid.fa-xmark {
+  font-size: 50px;
+  color: white;
+  background-color: green;
+  width: 40%;
+  height: 80%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0 0 0 100%;
+}
+
+#menu {
     text-decoration: none;
     color: red;
 
@@ -38,17 +68,6 @@ header {
 
 
   }
-
-}
-h1{
-color:red;
-}
-#logo-img {
-  width: 300px;
-  height: 150px;
-  border-radius: 50%;
-}
-
-#contact-2 {
+#contact {
   margin: 1500px 0;
 }
