--- a/creative.SCSS
+++ b/creative.SCSS
@@ -1,73 +1,67 @@
+
 header {
   display: flex;
   background-color: gray;
-  z-index: 9;
 }
 
-#nav-pc-sp {
-  font-size: 15px;
-  color: black;
-  display: block;
-  }
-
-#link-box {
-  background-color: rgba(white, 0.2);
-  padding: 20px 10px;
-  border-radius: 0 0 0 30px;
-  position: absolute;
-    top: 20px;
-      right: 30px;
-  >div {
-      background-color: rgba(white, 0.5);
-    }
-
-  
-
-}
 
 h1 {
   color: red;
 }
 
 .fa-brands {
+  display: flex;
   font-size: 100px;
   border-radius: 50%;
+  z-index: 9;
 }
 
 /*ハンバーガー*/
 .fa-solid.fa-bars {
   font-size: 50px;
   color: white;
-  float: left;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+    right: 15px;
+    z-index: 9;
 }
 
 /*バツマーク*/
 .fa-solid.fa-xmark {
   font-size: 50px;
   color: white;
-  background-color: green;
-  width: 40%;
-  height: 80%;
   position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 0 0 0 100%;
+    top: 0;
+    right: 10px;
+  }
+  
+  #menu-back {
+  background-color: green;
+  width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
+  
+  /*トップページロゴ*/
+  .fa-brands.fa-wordpress-simple {
+  position: absolute;
+  top: 5px;
+    right: 450px;
+    font-size: 80px;
 }
 
 #menu {
     text-decoration: none;
     color: red;
+    display: block;
+      margin: 30px 50px 60px 30px;
+    
+      &>a {
+        font-size: 50px;
+      }
 
     &:hover {
       text-decoration: underline;
       color: blue;
+    
     }
-
-
-  }
-#contact {
-  margin: 1500px 0;
-}
