--- a/creative.SCSS.css
+++ b/creative.SCSS.css
@@ -2,25 +2,6 @@
 header {
   display: flex;
   background-color: gray;
-  z-index: 9;
-}
-
-#nav-pc-sp {
-  font-size: 15px;
-  color: black;
-  display: block;
-}
-
-#link-box {
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 20px 10px;
-  border-radius: 0 0 0 30px;
-  position: absolute;
-  top: 20px;
-  right: 30px;
-}
-#link-box > div {
-  background-color: rgba(255, 255, 255, 0.5);
 }
 
 h1 {
@@ -28,43 +9,57 @@ h1 {
 }
 
 .fa-brands {
+  display: flex;
   font-size: 100px;
   border-radius: 50%;
+  z-index: 9;
 }
 
 /*ハンバーガー*/
 .fa-solid.fa-bars {
   font-size: 50px;
   color: white;
-  float: left;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 15px;
+  z-index: 9;
 }
 
 /*バツマーク*/
 .fa-solid.fa-xmark {
   font-size: 50px;
   color: white;
-  background-color: green;
-  width: 40%;
-  height: 80%;
   position: absolute;
   top: 0;
-  right: 0;
-  border-radius: 0 0 0 100%;
+  right: 10px;
+}
+
+#menu-back {
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+/*トップページロゴ*/
+.fa-brands.fa-wordpress-simple {
+  position: absolute;
+  top: 5px;
+  right: 450px;
+  font-size: 80px;
 }
 
 #menu {
   text-decoration: none;
   color: red;
+  display: block;
+  margin: 30px 50px 60px 30px;
+}
+#menu > a {
+  font-size: 50px;
 }
 #menu:hover {
   text-decoration: underline;
   color: blue;
-}
-
-#contact {
-  margin: 1500px 0;
 }
 /*# sourceMappingURL=creative.SCSS.css.map */
