--- a/自作その2（デザインカンプ）/design_style.SCSS
+++ b/自作その2（デザインカンプ）/design_style.SCSS
@@ -1,8 +1,10 @@
 body{
-  font-family:Noto Sans Japanese,
-  url(https://fonts.google.com/noto/specimen/),
-  Noto+Sans+JP;
+  color:black;
+  background-color:white;
+  font-family:
+  'https://fonts.google.com/noto/specimen/Noto+Sans+JP';
 }
+
 
 /*PC用のスタイル*/
 @media screen and(max-width:768px){
@@ -10,18 +12,28 @@ body{
   body{
     max-width:1080px;
     min-width:960px;
-    margin:0 auto;
   }
 }
 
 #nav-pc{
+  margin:30px auto;
+
+  > a{
+    font-size:34px;
+    font-weight:bold;
+    padding:10px;
+  }
 
   > #MyProfile{
     border:1px solid black;
-    padding:20px;
+    margin:30px 250px;
+  }
+
+  > #menu{
+    margin:10px 30px;
   }
   > img{
-    margin:30px;
+    margin:30px 0;
     width:100%;
   }
 }
