--- a/自作その2（デザインカンプ）/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/design_style.SCSS.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 body {
-  font-family: Noto Sans Japanese, url(https://fonts.google.com/noto/specimen/), NotoSansJP;
+  color: black;
+  background-color: white;
+  font-family: "https://fonts.google.com/noto/specimen/Noto+Sans+JP";
 }
 
 /*PC用のスタイル*/
@@ -8,15 +10,25 @@ body {
   body {
     max-width: 1080px;
     min-width: 960px;
-    margin: 0 auto;
   }
+}
+#nav-pc {
+  margin: 30px auto;
+}
+#nav-pc > a {
+  font-size: 34px;
+  font-weight: bold;
+  padding: 10px;
 }
 #nav-pc > #MyProfile {
   border: 1px solid black;
-  padding: 20px;
+  margin: 30px 250px;
+}
+#nav-pc > #menu {
+  margin: 10px 30px;
 }
 #nav-pc > img {
-  margin: 30px;
+  margin: 30px 0;
   width: 100%;
 }
 
