ヘッダーのCSSの調整。完成

--- a/自作その2（デザインカンプ）/design_style.SCSS
+++ b/自作その2（デザインカンプ）/design_style.SCSS
@@ -1,43 +1,60 @@
 body{
-  color:black;
-  background-color:white;
-  font-family:
-  'https://fonts.google.com/noto/specimen/Noto+Sans+JP';
+  font-family:'Noto Sans Japanese';
+  max-width:1080px;
+  min-width:960px;
+  // 全体の左右の余白をとるため
+  margin:0 auto;
 }
 
 
 /*PC用のスタイル*/
-@media screen and(max-width:768px){
+@media screen and(min-width:768px){
 
-  body{
-    max-width:1080px;
-    min-width:960px;
+  // ヘッダーとメインの余白をとるために使用
+  header{
+    margin:30px 0;
   }
-}
 
-#nav-pc{
-  margin:30px auto;
 
-  > a{
+  #nav-pc{
     font-size:34px;
     font-weight:bold;
-    padding:10px;
+    // aタグ全体のCSS
+    a{
+      text-decoration:none;
+      text-align:center;
+      color:black;
+    }
+
+    // マイプロフィール
+    #MyProfile{
+      // 枠線のCSS
+      border:1px solid;
+      // 枠内の余白
+      padding:5px 10px;
+      // 枠外の余白
+      margin:30px 190px;
+    }
+
+    // メニュー
+    #menu{
+      // divを使用
+      // プロフィールとの余白調整の為
+      // 横並びにするように対応
+      margin:30px auto;
+      display:inline-block;
+      // リンク全体の余白
+      > a{
+        margin:0 30px;
+      }
+    }
+
+    
   }
 
-  > #MyProfile{
-    border:1px solid black;
-    margin:30px 220px;
-  }
-
-  > #menu{
-    margin:30px 30px;
-  }
-  > img{
-    margin:30px 0;
-    width:100%;
-  }
-}
-
-a{
-  font-size:20px;
+#header-img{
+    // 画面内に画像が収まるように
+      width:100%;
+    }
+  
 }
