--- a/自作その2（デザインカンプ）/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/design_style.SCSS.css
@@ -9,28 +9,28 @@ body {
 /*PC用のスタイル*/
 @media screen and (min-width: 768px) {
   header {
-    margin: 30px 0;
+    margin: 20px 0;
   }
   #nav-pc {
     font-size: 34px;
     font-weight: bold;
+    display: flex;
   }
   #nav-pc a {
     text-decoration: none;
     text-align: center;
     color: black;
   }
-  #nav-pc #MyProfile {
+  #MyProfile {
     border: 1px solid;
     padding: 5px 10px;
-    margin: 30px 190px;
+    margin: 30px 90px;
   }
-  #nav-pc #menu {
-    margin: 30px auto;
-    display: inline-block;
+  #menu {
+    margin: auto;
   }
-  #nav-pc #menu > a {
-    margin: 0 30px;
+  #menu > a {
+    margin: auto 30px;
   }
   #header-img {
     width: 100%;
