--- a/自作その2（デザインカンプ）/design_style.SCSS
+++ b/自作その2（デザインカンプ）/design_style.SCSS
@@ -12,7 +12,7 @@ body{
 
   // ヘッダーとメインの余白をとるために使用
   header{
-    margin:20px 0;
+    margin-top:20px;
   }
 
 
@@ -56,7 +56,49 @@ body{
       width:100%;
     }
 
+    // About
+
+    .index-h2{
+    font-size:34px;
+    text-align:center;
+    margin:0;
+  }
 
 
+section{
+// 見出しと見出しの間の余白
+  margin-top:40px;
+}
+
+#About-main{
+  display:flex;
+  // 両端の中央揃えの為
+  justify-content:center;
+  // 各子要素を中央揃えする為
+  align-items:center;
+}
+
+#About_img{
+  // 画像のあるdivのサイズ調整
+  width:15%;
+  // 中身の中央揃え
+  text-align:center;
+  > img{
+    // 円形にする為
+    border-radius:50%;
+    // 画像のサイズ調整
+    width:100%;
+  }
+}
+
+#About_list{
+  margin:0 50px;
+}
+  h3{
+    font-size:24px;
+  }
+  li{
+    font-size:18px;
+  }
 
   }
