--- a/自作その2（デザインカンプ）/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/design_style.SCSS.css
@@ -9,7 +9,7 @@ body {
 /*PC用のスタイル*/
 @media screen and (min-width: 768px) {
   header {
-    margin: 20px 0;
+    margin-top: 20px;
   }
   #nav-pc {
     font-size: 34px;
@@ -34,6 +34,36 @@ body {
   }
   #header-img {
     width: 100%;
+  }
+  .index-h2 {
+    font-size: 34px;
+    text-align: center;
+    margin: 0;
+  }
+  section {
+    margin-top: 40px;
+  }
+  #About-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #About_img {
+    width: 15%;
+    text-align: center;
+  }
+  #About_img > img {
+    border-radius: 50%;
+    width: 100%;
+  }
+  #About_list {
+    margin: 0 50px;
+  }
+  h3 {
+    font-size: 24px;
+  }
+  li {
+    font-size: 18px;
   }
 }
 /*# sourceMappingURL=design_style.SCSS.css.map */
