レスポンシブ対応着手開始。 header部分終了

--- a/自作その2（デザインカンプ）/design_style.SCSS
+++ b/自作その2（デザインカンプ）/design_style.SCSS
@@ -1,15 +1,17 @@
 body{
   font-family:'Noto Sans Japanese';
-  max-width:1080px;
-  min-width:960px;
-  // 全体の左右の余白をとるため
   margin:0 auto;
 }
 
 
 /*PC用のスタイル*/
 @media screen and(min-width:768px){
+  body{
+  max-width:1080px;
+  min-width:960px;
+  }
 
+  // 全体の左右の余白をとるため
   // ヘッダーとメインの余白をとるために使用
   header{
     margin-top:20px;
@@ -138,5 +140,48 @@ section{
       font-size:18px;
       text-align:center;
     }
+// ここまでPC用
+}
 
+@media screen and (max-width:767px){
+  body{
+    min-width:375px;
+  }
+
+  header{
+    margin:20px 0;
+  }
+
+  #nav-pc{
+    display:none;
+  }
+
+  #nav-sp{
+    display:flex;
+    justify-content: space-between;
+
+    a{
+      text-decoration:none;
+      color:black;
+      font-weight:bold;
+      margin:0 5px;
+    }
+  }
+  #MyProfile,#menu{
+    font-size:34px;
+  }
+
+  #MyProfile{
+    border:1px solid;
+    margin-left:10px;
+  }
+
+  #menu{
+    margin-right:10px;
+  }
+
+  #header-img{
+    margin-top:20px;
+    width:100%;
+  }
 }
