--- a/自作その2（デザインカンプ）/css/design_style.SCSS
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS
@@ -22,6 +22,7 @@ body{
     font-size:34px;
     font-weight:bold;
     display:flex;
+    justify-content:space-around;
     // aタグ全体のCSS
     a{
       text-decoration:none;
@@ -41,17 +42,16 @@ body{
       // 枠内の余白
       padding:5px 10px;
       // 枠外の余白
-      margin:30px 90px;
     }
 
     // メニュー
     #menu{
       // divを使用
       // プロフィールとの余白
-      margin:auto;
+      
       > a{
         // AboutとWorks間の余白
-        margin:auto 30px;
+        margin:auto 20px;
         
         &:hover{
           color:gray;
@@ -67,6 +67,7 @@ body{
 #header-img{
     // 画面内に画像が収まるように
       width:100%;
+      margin-top:20px;
     }
 
     // About
