--- a/自作その2（デザインカンプ）/css/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS.css
@@ -1,25 +1,22 @@
 @charset "UTF-8";
 body {
   font-family: "Noto Sans Japanese";
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 /*PC用のスタイル*/
 @media screen and (min-width: 768px) {
-  body {
-    max-width: 1080px;
-    min-width: 960px;
-  }
-  header {
-    margin-top: 20px;
-  }
   #nav-pc {
-    font-size: 34px;
-    font-weight: bold;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
+    margin: 20px auto;
+    max-width: 960px;
   }
   #nav-pc a {
+    font-size: 34px;
+    font-weight: bold;
     text-decoration: none;
     text-align: center;
     color: black;
@@ -29,10 +26,11 @@ body {
   }
   #MyProfile {
     border: 1px solid;
-    padding: 5px 10px;
+    padding: 0 20px;
+    margin-left: 20px;
   }
   #menu > a {
-    margin: auto 20px;
+    margin-left: 20px;
   }
   #menu > a:hover {
     color: gray;
@@ -42,9 +40,9 @@ body {
   }
   #header-img {
     width: 100%;
-    margin-top: 20px;
   }
   .index-h2 {
+    padding: 60px 0 40px 0;
     font-size: 34px;
     text-align: center;
     margin: 0;
@@ -54,17 +52,24 @@ body {
   }
   #About-main {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
+    padding: 10px;
+    margin: 20px auto 20px;
+    max-width: 960px;
   }
-  #About_img {
-    width: 15%;
-    text-align: center;
-    padding-right: 10px;
-  }
-  #About_img > img {
+  #About-main img {
     border-radius: 50%;
-    width: 100%;
+    height: 280px;
+    width: 280px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border: 3px solid #999;
+    padding: 3px;
+  }
+  .content {
+    margin: 0 auto;
+    padding-left: 40px;
   }
   h3 {
     font-size: 24px;
@@ -78,7 +83,7 @@ body {
     gap: 20px;
   }
   #Works-box {
-    width: 17%;
+    width: 25%;
   }
   #Works-box img {
     width: 100%;
