--- a/自作その2（デザインカンプ）/css/design_style.SCSS
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS
@@ -1,32 +1,61 @@
 body{
   font-family:'Noto Sans Japanese';
+  /*bodyの余白を消す*/
   margin:0;
   padding:0;
 }
 
+/*共通のスタイル*/
 
-/*PC用のスタイル*/
-@media screen and(min-width:768px){
+// flexboxの基本プロパティ
+@mixin flex-df-setting($display:flex,$wrap:false,$justify:false,$align-i:false){
+  display:$display;
+  flex-wrap:$wrap;
+  justify-content:$justify;
+  align-items:$align-i;
 
-  #nav-pc{
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:space-around;
+  // 記述が不要な時に制御する為のミックスイン
+  @if $wrap != false{
+    flex-wrap:$wrap;
+  }
+
+  @if $justify != false{
+    justify-content:$justify;
+  }
+
+  @if $align-i != false{
+    align-items:$align-i;
+  }
+}
+
+  #nav{
+    @include flex-df-setting($wrap:wrap,$justify:space-between);
     margin:20px auto;
     max-width:960px;
-    // aタグ全体のCSS
+    /*aタグ全体のCSS*/
+
     a{
-      font-size:34px;
-      font-weight:bold;
       text-decoration:none;
-      text-align:center;
       color:black;
+
+      &:hover{
+        color:gray;
+      }
+
+      &:active{
+        color:black;
+      }
     }
   }
 
-  #nav-sp{
-    display:none;
+    /*最大文字の統一CSS*/
+  .font-sizeMax{
+      font-size:34px;
+      font-weight:bold;
+      text-align:center;
   }
+
+    
 
     // マイプロフィール
     #MyProfile{
@@ -46,14 +75,7 @@ body{
       > a{
         // AboutとWorks間の余白
         margin-left:20px;
-        
-        &:hover{
-          color:gray;
-        }
-
-        &:active{
-          color:black;
-        }
+        margin-right:20px;
   }
 }
 
@@ -62,15 +84,7 @@ body{
     // 画面内に画像が収まるように
       width:100%;
     }
-
     // About
-
-    .index-h2{
-    padding:60px 0 40px 0;
-    font-size:34px;
-    text-align:center;
-    margin:0;
-  }
 
 
 section{
@@ -79,27 +93,28 @@ section{
 }
 
 #About-main{
-  display:flex;
-  flex-wrap:wrap;
   // 各子要素を中央揃えする為
-  align-items:center;
+  @include flex-df-setting($wrap:wrap,$align-i:center);
   padding:10px;
   margin:20px auto 20px;
   max-width:960px;
+}
 
-  img{
+#About-img{
     // 円形にする為
     border-radius:50%;
     // 画像のサイズ調整
     height:280px;
     width:280px;
-    object-fit:cover;
     border: 3px solid #999;
     padding:3px;
+    /*About-imgの画像*/
+    background-image: url(../design-images/about.png);
+    background-size:cover;
+    background-repeat:no-repeat;
   }
-}
 
-.content{
+#About-list{
   margin:0 auto;
   padding-left:40px;
 }
@@ -113,8 +128,7 @@ section{
 
   // Works
   #Works-main{
-    display:flex;
-    justify-content:center;
+    @include flex-df-setting($wrap:wrap,$justify:center);
     gap:20px;
   }
 
@@ -142,107 +156,4 @@ section{
       font-size:18px;
       text-align:center;
     }
-// ここまでPC用
-}
-
-@media screen and (max-width:767px){
-  body{
-    min-width:375px;
-  }
-// ヘッダー
-  header{
-    margin:20px 0;
-  }
-// PC用のナビを消す
-  #nav-pc{
-    display:none;
-  }
-// ナビゲーション
-  #nav-sp{
-    display:flex;
-    justify-content: space-between;
-
-    a{
-      text-decoration:none;
-      color:black;
-      font-weight:bold;
-      margin:0 5px;
-
-      &:hover{
-        color:gray;
-      }
-
-      &:active{
-        color:black;
-      }
-    }
-
-  }
-  #MyProfile,#menu{
-    font-size:34px;
-  }
-
-  #MyProfile{
-    border:1px solid;
-    margin-left:10px;
-  }
-
-  #menu{
-    margin-right:10px;
-  }
-
-  #header-img{
-    margin-top:20px;
-    width:100%;
-  }
-
-  // About
-
-  .index-h2{
-    text-align:center;
-    font-size:34px;
-    margin:10px 0;
-  }
-
-  #About-main{
-    display:flex;
-    justify-content:center;
-    margin-left:-60px;
-  }
-
-  h3{
-    font-size:24px;
-  }
-  #About_img{
-    width:20%;
-    padding:30px 20px 0 0;
-    > img{
-      border-radius:50%;
-      width:100%;
-    }
-  }
-
-#Works{
-  display:flex;
-  flex-flow:column wrap;
-  text-align:center;
-}
-
-#Works_img{
-  width:100%;
-
-  img{
-    width:640px;
-  }
-}
-
-#Works_p{
-  font-size:18px;
-  text-align:center;
-}
-
-#copyright{
-  font-size:18px;
-  text-align:center;
-}
-}
+/*ここまで共通*/
