--- a/自作その2（デザインカンプ）/css/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS.css
@@ -11,9 +11,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: false;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  align-items: stretch;
   margin: 20px auto;
   max-width: 960px;
   /*aタグ全体のCSS*/
@@ -33,6 +31,13 @@ body {
 .font-sizeMax {
   font-size: 34px;
   font-weight: bold;
+}
+
+.font-18px {
+  font-size: 18px;
+}
+
+.t-align-center {
   text-align: center;
 }
 
@@ -58,9 +63,7 @@ section {
 #About-main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: false;
-  align-items: center;
-  flex-wrap: wrap;
+  justify-content: flex-start;
   align-items: center;
   padding: 10px;
   margin: 20px auto 20px;
@@ -88,17 +91,11 @@ h3 {
   font-size: 24px;
 }
 
-li {
-  font-size: 18px;
-}
-
 #Works-main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: false;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-items: stretch;
   gap: 20px;
 }
 
@@ -109,18 +106,11 @@ li {
   width: 100%;
 }
 #Works-box p {
-  font-size: 18px;
-  text-align: center;
   width: 95%;
 }
 
 footer {
   margin-top: 40px;
-}
-
-#copyright {
-  font-size: 18px;
-  text-align: center;
 }
 
 /*ここまで共通*/
