--- a/自作その2（デザインカンプ）/css/design_style.SCSS
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS
@@ -1,34 +1,9 @@
+@use "../../../default_mixin_setting/_main_mixin" as *;
+
 body{
   font-family:'Noto Sans Japanese';
   /*bodyの余白を消す*/
-  margin:0;
-  padding:0;
-}
-
-/*共通のスタイル*/
-
-// flexboxの基本プロパティ
-@mixin flex-df-setting($display:flex,$wrap:false,$justify:false,$align-i:false){
-  display:$display;
-
-  // 記述が不要な時に制御する為のミックスイン
-  @if $wrap != false{
-    flex-wrap:$wrap;
-  } @else{
-    flex-wrap:nowrap;
-  }
-
-  @if $justify != false{
-    justify-content:$justify;
-  } @else{
-    justify-content: flex-start;
-  }
-
-  @if $align-i != false{
-    align-items:$align-i;
-  } @else{
-    align-items: stretch;
-  }
+  @include space-setting(0,0);
 }
 
   #nav{
@@ -53,11 +28,10 @@ body{
 
     /*最大文字の統一CSS*/
   .font-sizeMax{
-      font-size:34px;
-      font-weight:bold;
+      @include font-setting(34px,bold);
   }
 
-  .font-18px{
+  .font-s-18px{
     font-size:18px;
   }
 
@@ -70,10 +44,8 @@ body{
     #MyProfile{
       // 枠線のCSS
       border:1px solid;
-      // 枠内の余白
-      padding:0 20px;
-      // 枠外の余白
-      margin-left:20px;
+      /*枠外・内の余白*/
+      @include space-setting(0 0 0 20px,0 20px);
     }
 
     // メニュー
@@ -104,8 +76,7 @@ section{
 #About-main{
   // 各子要素を中央揃えする為
   @include flex-df-setting($wrap:wrap,$align-i:center);
-  padding:10px;
-  margin:20px auto 20px;
+  @include space-setting(20px auto 20px,10px);
   max-width:960px;
 }
 
@@ -114,8 +85,7 @@ section{
     // 円形にする為
     border-radius:50%;
     // 画像のサイズ調整
-    height:280px;
-    width:280px;
+    @include wd-ht-setting(280px,280px);
     border: 3px solid #999;
     padding:3px;
     /*About-imgの画像*/
@@ -125,8 +95,7 @@ section{
   }
 
 #About-list{
-  margin:0 auto;
-  padding-left:40px;
+  @include space-setting(0 auto,0 0 0 40px);
 }
 
   h3{
