--- a/自作その2（デザインカンプ）/css/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS.css
@@ -6,12 +6,10 @@ body {
   padding: 0;
 }
 
-/*共通のスタイル*/
 #nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: stretch;
   margin: 20px auto;
   max-width: 960px;
   /*aタグ全体のCSS*/
@@ -33,7 +31,7 @@ body {
   font-weight: bold;
 }
 
-.font-18px {
+.font-s-18px {
   font-size: 18px;
 }
 
@@ -43,8 +41,9 @@ body {
 
 #MyProfile {
   border: 1px solid;
+  /*枠外・内の余白*/
+  margin: 0 0 0 20px;
   padding: 0 20px;
-  margin-left: 20px;
 }
 
 #menu > a {
@@ -63,17 +62,16 @@ section {
 #About-main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
   align-items: center;
-  padding: 10px;
   margin: 20px auto 20px;
+  padding: 10px;
   max-width: 960px;
 }
 
 #About-img {
   border-radius: 50%;
-  height: 280px;
   width: 280px;
+  height: 280px;
   border: 3px solid #999;
   padding: 3px;
   /*About-imgの画像*/
@@ -84,7 +82,7 @@ section {
 
 #About-list {
   margin: 0 auto;
-  padding-left: 40px;
+  padding: 0 0 0 40px;
 }
 
 h3 {
@@ -95,7 +93,6 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: stretch;
   gap: 20px;
 }
 
