transitionとtransformプロパティの学習

--- a/自作その2（デザインカンプ）/css/design_style.SCSS
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS
@@ -10,11 +10,13 @@ body{
     @include flex-df-setting($wrap:wrap,$justify:space-between);
     margin:20px auto;
     max-width:960px;
+    color:black;
     /*aタグ全体のCSS*/
 
     a{
       text-decoration:none;
       color:black;
+      transition:color .3s;
 
       &:hover{
         color:gray;
@@ -23,6 +25,8 @@ body{
       &:active{
         color:black;
       }
+
+      
     }
   }
 
@@ -64,6 +68,12 @@ body{
 #header-img{
     // 画面内に画像が収まるように
       width:100%;
+      transform:scale(80%);
+      transition:transform .3s 0s;
+
+      &:hover{
+        transform:scale(100%);
+      }
     }
     // About
 
@@ -71,7 +81,14 @@ body{
 section{
 // 見出しと見出しの間の余白
   margin-top:40px;
+  transform:scale(80%);
+  transition:transform .5s 0s;
+
+  &:hover{
+    transform:scale(100%);
+  }
 }
+
 
 #About-main{
   // 各子要素を中央揃えする為
