--- a/自作その2（デザインカンプ）/css/design_style.SCSS.css
+++ b/自作その2（デザインカンプ）/css/design_style.SCSS.css
@@ -12,11 +12,13 @@ body {
   justify-content: space-between;
   margin: 20px auto;
   max-width: 960px;
+  color: black;
   /*aタグ全体のCSS*/
 }
 #nav a {
   text-decoration: none;
   color: black;
+  transition: color 0.3s;
 }
 #nav a:hover {
   color: gray;
@@ -53,10 +55,20 @@ body {
 
 #header-img {
   width: 100%;
+  transform: scale(80%);
+  transition: transform 0.3s 0s;
+}
+#header-img:hover {
+  transform: scale(100%);
 }
 
 section {
   margin-top: 40px;
+  transform: scale(80%);
+  transition: transform 0.5s 0s;
+}
+section:hover {
+  transform: scale(100%);
 }
 
 #About-main {
