--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -2,72 +2,55 @@
 
 body{
   @include space-setting(0,0);
+  font-family: serif;
   display: grid;
-  min-height:100vh;
-}
-
-.grid{
-  display:grid;
   grid-template:
   /*ヘッダー*/
   "head" 1fr
   /*メイン*/
-  "main" 4fr
+  "main" 1fr
   /*フッター*/
-  "foot" 20px/1fr;
-  height:100vh;
+  "foot" 1fr/1fr;
+  min-height:100vh;
 }
 
-.header{
+header{
   grid-area:head;
-  margin:0 auto;
-  display: flex;
-  justify-content: space-between;
+  display:flex;
+  justify-content: space-around;
   align-items: center;
-  width:960px;
-  padding:0 4%;
-  height:270px;
-  gap:30%;
-  
+
+  > a{
+    font-size:40px;
+    font-weight:bold;
+  }
+/*リンクの色とデザイン調整*/
   a{
     text-decoration:none;
-  color:black;
+    color:black;
   }
 }
 
-#My-Work{
-  margin:0;
-  padding:0;
-  font-size:30px;
-}
-
 nav{
-  display: flex;
-  align-items: center;
+  display:flex;
+  gap:20px;
+  font-size:20px;
+  
+  img{
+      width:20px;
+      vertical-align: middle;
+    }
 }
 
-.menu{
-  margin:auto 20px;
 
-}
-
-#sns{
-  display:block;
-  width:22px;
-}
-    
-
-
-
-.main{
+main{
   grid-area:main;
+
+  > img{
+    width:100%;
+  }
 }
 
-#main-img{
-  width:100%;
-}
-
-.footer{
+footer{
   grid-area:foot;
-  border: 1px solid black;
 }
