--- a/自作その3/css/copy_coding.SCSS.css
+++ b/自作その3/css/copy_coding.SCSS.css
@@ -1,62 +1,47 @@
+@charset "UTF-8";
 body {
   margin: 0;
   padding: 0;
+  font-family: serif;
   display: grid;
+  grid-template: "head" 1fr "main" 1fr "foot" 1fr/1fr;
   min-height: 100vh;
 }
 
-.grid {
-  display: grid;
-  grid-template: "head" 1fr "main" 4fr "foot" 20px/1fr;
-  height: 100vh;
-}
-
-.header {
+header {
   grid-area: head;
-  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 960px;
-  padding: 0 4%;
-  height: 270px;
-  gap: 30%;
+  /*リンクの色とデザイン調整*/
 }
-.header a {
+header > a {
+  font-size: 40px;
+  font-weight: bold;
+}
+header a {
   text-decoration: none;
   color: black;
 }
 
-#My-Work {
-  margin: 0;
-  padding: 0;
-  font-size: 30px;
-}
-
 nav {
   display: flex;
-  align-items: center;
+  gap: 20px;
+  font-size: 20px;
+}
+nav img {
+  width: 20px;
+  vertical-align: middle;
 }
 
-.menu {
-  margin: auto 20px;
-}
-
-#sns {
-  display: block;
-  width: 22px;
-}
-
-.main {
+main {
   grid-area: main;
 }
-
-#main-img {
+main > img {
   width: 100%;
 }
 
-.footer {
+footer {
   grid-area: foot;
-  border: 1px solid black;
 }
 /*# sourceMappingURL=copy_coding.SCSS.css.map */
