--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -6,7 +6,7 @@ body{
   display: grid;
   grid-template:
   /*ヘッダー*/
-  "head" 1fr
+  "head" 270px
   /*メイン*/
   "main" 1fr
   /*フッター*/
@@ -21,7 +21,7 @@ header{
   align-items: center;
 
   > a{
-    font-size:40px;
+    font-size:30px;
     font-weight:bold;
   }
 /*リンクの色とデザイン調整*/
@@ -34,23 +34,49 @@ header{
 nav{
   display:flex;
   gap:20px;
-  font-size:20px;
-  
+  font-size:18px;
+  /*インスタアイコン*/
   img{
       width:20px;
       vertical-align: middle;
     }
 }
 
-
 main{
   grid-area:main;
-
+  display:flex;
+  flex-flow:row wrap;
   > img{
     width:100%;
+    justify-self:flex-start;
+  }
+
+  h1{
+    text-align: center;
+  }
+
+  section{
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    align-items: center;
+    justify-content: space-between;
+
+    #first-li{
+      margin-bottom:40px;
+    }
+        
+    ul{
+      padding:0;
+      list-style:none;
+    }
+
+    ul,p{
+      width:80%;
   }
 }
 
 footer{
   grid-area:foot;
+}
 }
