--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -1,82 +1,64 @@
 @use "../../../default_mixin_setting/_main_mixin" as *;
 
 body{
-  @include space-setting(0,0);
   font-family: serif;
-  display: grid;
-  grid-template:
-  /*ヘッダー*/
-  "head" 270px
-  /*メイン*/
-  "main" 1fr
-  /*フッター*/
-  "foot" 1fr/1fr;
+  display:grid;
+  grid-template: 
+  "head" 
+  "main" 
+  "foot"/1fr;
   min-height:100vh;
 }
 
 header{
   grid-area:head;
-  display:flex;
-  justify-content: space-around;
-  align-items: center;
+}
 
-  > a{
-    font-size:30px;
-    font-weight:bold;
-  }
-/*リンクの色とデザイン調整*/
-  a{
+section{
+  display: grid;
+  align-items: center;
+  grid-template: 
+  ". . . . " 60px
+  "My-work My-work menu menu " 
+  ". . . . " 60px
+  "head-img head-img head-img head-img" 
+  /10% auto auto 10%; 
+
+  a {
     text-decoration:none;
     color:black;
   }
 }
 
+#MyWork{
+  grid-area: My-work;
+  font-size:30px;
+  font-weight:bold;
+  justify-self: center;
+}
+
 nav{
+  grid-area: menu;
+  justify-self: center;
+  font-size:20px;
   display:flex;
   gap:20px;
-  font-size:18px;
-  /*インスタアイコン*/
-  img{
-      width:20px;
-      vertical-align: middle;
-    }
+}
+
+#sns{
+  width:20px;
+  vertical-align: sub;
+}
+
+#header-img{
+  grid-area:head-img;
+  width:100%;
 }
 
 main{
   grid-area:main;
-  display:flex;
-  flex-flow:row wrap;
-  > img{
-    width:100%;
-    justify-self:flex-start;
-  }
-
-  h1{
-    text-align: center;
-  }
-
-  section{
-    display:flex;
-    flex-direction:column;
-    flex-wrap:wrap;
-    align-items: center;
-    justify-content: space-between;
-
-    #first-li{
-      margin-bottom:40px;
-    }
-        
-    ul{
-      padding:0;
-      list-style:none;
-    }
-
-    ul,p{
-      width:80%;
-  }
 }
 
 footer{
   grid-area:foot;
-}
 }
