--- a/自作その3/css/copy_coding.SCSS.css
+++ b/自作その3/css/copy_coding.SCSS.css
@@ -1,20 +1,23 @@
 body {
+  margin: 0;
+  padding: 0;
   font-family: serif;
   display: grid;
-  grid-template: "head" "main" "foot"/1fr;
+  grid-template: "head" "main" "foot";
   min-height: 100vh;
 }
 
 header {
   grid-area: head;
+  display: grid;
+  grid-template: ". ." 100px "My-work head-nav" ". ." 100px "head-img head-img" ". ." 60px;
 }
 
-section {
-  display: grid;
-  align-items: center;
-  grid-template: ". . . . " 60px "My-work My-work menu menu " ". . . . " 60px "head-img head-img head-img head-img"/10% auto auto 10%;
+#head-nav {
+  grid-area: head-nav;
 }
-section a {
+
+#MyWork, .menu {
   text-decoration: none;
   color: black;
 }
@@ -46,6 +49,45 @@ nav {
 
 main {
   grid-area: main;
+  display: grid;
+  grid-template: "About" "Works" "News" "Contact";
+}
+
+#About {
+  grid-area: About;
+  display: grid;
+  grid-template: "." 60px "About-h1" "About-ul" "About-p" "." 60px;
+  row-gap: 20px;
+}
+#About h1 {
+  grid-area: About-h1;
+  justify-self: center;
+}
+#About ul {
+  grid-area: About-ul;
+  list-style: none;
+  padding-left: 0;
+}
+#About #first-li {
+  margin-bottom: 20px;
+}
+#About p, #About ul {
+  margin: 0 15%;
+}
+#About p {
+  grid-area: About-p;
+}
+
+#Works {
+  grid-area: Works;
+}
+
+#News {
+  grid-area: News;
+}
+
+#Contact {
+  grid-area: Contact;
 }
 
 footer {
