--- a/自作その3/css/copy_coding.SCSS.css
+++ b/自作その3/css/copy_coding.SCSS.css
@@ -32,6 +32,7 @@ header {
 nav {
   grid-area: menu;
   justify-self: center;
+  align-self: center;
   font-size: 20px;
   display: flex;
   gap: 20px;
