--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -146,6 +146,41 @@ main{
 
 #News{
   grid-area:News;
+  display:grid;
+  grid-template:
+  ". News-h1. "
+  ". News-dl. "
+  ". . ." 40px
+  /80px auto 80px;
+  justify-items: center;
+  align-items:center;
+  gap:40px;
+  
+h1{
+  grid-area:News-h1;
+}
+
+  dl{
+    grid-area:News-dl;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+  }
+
+  #News-first-dr,#News-first-dt{
+    border-top:solid 1px black;
+    border-bottom:solid 1px black;
+  }
+
+  .News-dr,.News-dt{
+    width:20%;
+    border-bottom:solid 1px black;
+    padding:15px;
+  }
+
+  .News-dt{
+    width:70%;
+  }
 }
 
 #Contact{
