--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -183,109 +183,174 @@ h1{
   }
 }
 
+// コンタクト
 #Contact{
-  grid-area:Contact;
+
   display:grid;
   grid-template:
-  ". contact-h1 ."
-  ". contact-form ."
-  ". . ." 20px
+  ". contact-box. " 
+  ". . ." 40px
   /80px auto 80px;
-  gap:40px;
+  justify-items:center;
+
+  div{
+    grid-area:contact-box;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center;
+    gap:40px;
 
 
-  h1{
-    grid-area:contact-h1;
-    justify-self: center;
+
+    h1{
+      width:100%;
+      text-align:center;
+    }
+
+    #contact-form{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content: space-around;
+      align-content:center;
+      gap:10px;
+      margin:1% 0;
+
+      .textbox{
+            height:40px;
+            width:80%;
+          }
+      
+    }
   }
 
-  #contact-form{
-    grid-area:contact-form;
-    display:grid;
-    grid-template:
-    "name1 span1 text1"
-    "name2 span2 text2"
-    "name3 span3 text3"
-    ". . submit"
-    /60px 60px auto;
-    justify-items:center;
-    align-items:center;
-      gap:20px;
-    // ラベル
-
-    #contact-label-1{
-      grid-area:name1;
-    }
-
-    #contact-label-2{
-      grid-area:name2
-    }
-
-    #contact-label-3{
-      grid-area:name3
-    }
-
-    // span
-
-    #contact-span-1{
-      grid-area:span1;
-    }
-
-    #contact-span-2{
-      grid-area:span2;
-    }
-
-    #contact-span-3{
-      grid-area:span3;
-    }
-
-    // text
-    #contact-text-1{
-      grid-area:text1;
-    }
-
-    #contact-text-2{
-      grid-area:text2;
-    }
-
     #message-box{
-      grid-area:text3;
       height:150px;
       width:80%;
     }
 
-    button{
-      grid-area:submit;
+    #submit{
+      width:100%;
+      button{
       font-size:20px;
       background-color:black;
       color:white;
-      justify-self:center;
-      height:40px;
-      width:25%;
+      width:15%;
+    }
     }
 
-    .contact-label,.contact-span{
+    .contact-label,#contact-label-3{
+      width:15%;
+    }
+
+    .contact-label,#contact-label-3{
       font-weight:bold;
     }
 
-    .contact-span{
-      color:red;
-    }
-
-    .textbox{
-      height:40px;
-      width:80%;
-    }
-
-    .textbox,#message-box,button{
-      position:relative;
-      right:10%;
-    }
   }
-}
 
 
 
 footer{
   grid-area:foot;
 }
+// #Contact{
+  //   grid-area:Contact;
+  //   display:grid;
+  //   grid-template:
+  //   ". contact-h1 ."
+  //   ". contact-form ."
+  //   ". . ." 20px
+  //   /80px auto 80px;
+  //   gap:40px;
+
+
+   // h1{
+  //   grid-area:contact-h1;
+  //   justify-self: center;
+  // }
+
+  // #contact-form{
+  //   grid-area:contact-form;
+  //   display:grid;
+  //   grid-template:
+  //   "name1 span1 text1"
+  //   "name2 span2 text2"
+  //   "name3 span3 text3"
+  //   ". . submit"
+  //   /60px 60px auto;
+  //   justify-items:center;
+  //   align-items:center;
+  //     gap:20px;
+  //   // ラベル
+
+  //   #contact-label-1{
+  //     grid-area:name1;
+  //   }
+
+  //   #contact-label-2{
+  //     grid-area:name2
+  //   }
+
+  //   #contact-label-3{
+  //     grid-area:name3
+  //   }
+
+  //   // span
+
+  //   #contact-span-1{
+  //     grid-area:span1;
+  //   }
+
+  //   #contact-span-2{
+  //     grid-area:span2;
+  //   }
+
+  //   #contact-span-3{
+  //     grid-area:span3;
+  //   }
+
+  //   // text
+  //   #contact-text-1{
+  //     grid-area:text1;
+  //   }
+
+  //   #contact-text-2{
+  //     grid-area:text2;
+  //   }
+
+  //   #message-box{
+  //     grid-area:text3;
+  //     height:150px;
+  //     width:80%;
+  //   }
+
+  //   button{
+  //     grid-area:submit;
+  //     font-size:20px;
+  //     background-color:black;
+  //     color:white;
+  //     justify-self:center;
+  //     height:40px;
+  //     width:25%;
+  //   }
+
+  //   .contact-label,.contact-span{
+  //     font-weight:bold;
+  //   }
+
+  //   .contact-span{
+  //     color:red;
+  //   }
+
+  //   .textbox{
+  //     height:40px;
+  //     width:80%;
+  //   }
+
+  //   .textbox,#message-box,button{
+  //     position:relative;
+  //     right:10%;
+  //   }
+  // }
+// }  
